<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.webforj.samples</groupId>
	<artifactId>controlsamples</artifactId>
	<version>24.20</version>
  <packaging>war</packaging>
	<name>controlsamples</name>
  <description>A simple webforJ application</description>
  <url>https://webforj.com</url>


  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>

    <webforj.version>24.20</webforj.version>

    <jetty.version>12.0.14</jetty.version>
    <jetty.scan>1</jetty.scan>
  </properties>

  <repositories>
    <repository>
      <id>snapshots-repo</id>
      <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>com.webforj</groupId>
      <artifactId>webforj</artifactId>
      <version>${webforj.version}</version>
    </dependency>
		<dependency>
			<groupId>com.webforj</groupId>
			<artifactId>webforj-code</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>com.webforj</groupId>
			<artifactId>webforj-googlecharts</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>com.webforj</groupId>
			<artifactId>webforj-terminal</artifactId>
			<version>${project.version}</version>
		</dependency>
  </dependencies>

  <build>
    <finalName>${project.name}</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <version>3.4.0</version>
        <configuration>
          <webResources>
            <resource>
              <filtering>true</filtering>
              <directory>src/main/webapp</directory>
              <includes>
                <include>**/web.xml</include>
              </includes>
            </resource>
          </webResources>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.eclipse.jetty.ee8</groupId>
        <artifactId>jetty-ee8-maven-plugin</artifactId>
        <version>${jetty.version}</version>
        <configuration>
          <scan>${jetty.scan}</scan>
          <httpConnector>
            <port>8080</port>
          </httpConnector>
          <webApp>
            <contextPath>/</contextPath>
          </webApp>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>